Fetch imported entity from sync table